# tag2now-BE

./: .gitignore  CLAUDE.md  Dockerfile  compose.test.yml  compose.yml  infoArray.md  np2_structs.proto  pyproject.toml  requirements.txt  rpcn_client.py  tekken_tt2.py  tekken_tt2_data.py  test_rpcn_client.py  test_tekken_tt2.py
.github/workflows/: ci.yml
docs/: rank-match-leaderboard-data.txt
docs/k8s/: cluster-secret-store.yaml  configmap.yaml  external-secret.yaml  ingress.yaml
env/: .env.dev  .env.example  .env.prod
examples/: tekken_tt2_data.py
src/: __init__.py  __main__.py  app.py
src/activity/: __init__.py  db.py  ports.py  router.py  service.py
src/community/: __init__.py  db.py  exceptions.py  identity.py  models.py  ports.py  router.py  service.py
src/env/: .env.example  .env.prod  settings.py
src/history/: __init__.py  db.py  entities.py  event_handlers.py  models.py  ports.py  router.py  service.py
src/matching/: __init__.py  constants.py  db.py  events.py  matchmaking_tracker.py  models.py  ports.py  router.py  rpcn_lifecycle.py  service.py
src/rpcn_client/: __init__.py  __main__.py  client.py  constants.py  exceptions.py  helpers.py  metrics.py  models.py  utils.py
src/shared/: cache.py  database.py  dynamo.py  events.py  exceptions.py  settings.py
src/tekken_tt2/: __init__.py  activity_tracker.py  app.py  cache.py  client.py  data.py  db.py  events.py  exceptions.py  matchmaking_tracker.py  models.py  ports.py  router.py  rpcn_lifecycle.py  service.py  settings.py
tests/: conftest.py  test_rpcn_client.py  test_tekken_tt2.py
(+45 files in other folders)
