[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rpcn-client"
version = "0.1.0"
description = "Minimal Python client for the RPCN PSN multiplayer server"
requires-python = ">=3.10"
dependencies = ["protobuf>=4.0", "grpcio-tools>=1.50"]

[project.scripts]
rpcn-client = "rpcn_client.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "examples"]
